[package]
authors = [
  "Dilshod Tadjibaev @antimora",
]
categories = ["science"]
description = "Online histogram statistics calculations"
documentation = "https://docs.rs/hstats"
edition = "2021"
keywords = ["statistics", "stats", "histogram", "online", "rolling", "data"]
license = "MIT OR Apache-2.0"
name = "hstats"
readme = "README.md"
repository = "https://github.com/antimora/hstats"
version = "0.1.0"

[dependencies]
num-traits = {version = "0.2.15", default-features = false, features = ["libm"]}
rolling-stats = "0.7.0"

[dev-dependencies]
float-cmp = "0.9.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
