[package]
authors = [
  "Dilshod Tadjibaev @antimora",
]
categories = ["science"]
description = "Online histogram statistics calculations"
documentation = "https://docs.rs/hstats"
edition = "2024"
keywords = ["statistics", "stats", "histogram", "online", "rolling"]
license = "MIT OR Apache-2.0"
name = "hstats"
readme = "README.md"
repository = "https://github.com/antimora/hstats"
version = "0.2.0"

[dependencies]
num-traits = {version = "0.2.19", default-features = false, features = ["libm"]}
rolling-stats = "0.8.0"

[dev-dependencies]
float-cmp = "0.10.0"
rand = "0.10.0"
rand_distr = "0.6.0"
rayon = "1.11.0"
